@startuml
class framework.MyMapReduce {
- PartitionTable pTable
- ConcurrentKVStore kvStore
- MapperReducerClientAPI client
- int numMappers
- int numReducers
- Lock lock
- boolean allMappersDone
- int numMappersDone
- Thread[] mappers
- Thread[] reducers
+ void MREmit(Object,Object)
- LinkedList intermediateReduce(PartitionTable.Partition)
+ Object MRGetNext(Object,int)
# void MRRunHelper(String,MapperReducerClientAPI,int,int)
}
class framework.MyMapReduce.Mapper {
+ void run()
}
class framework.MyMapReduce.Reducer {
- PartitionTable.Partition partition
+ void run()
}


framework.MapReduce <|-- framework.MyMapReduce
framework.MyMapReduce +.. framework.MyMapReduce.Mapper
framework.Runnable <|.. framework.MyMapReduce.Mapper
framework.MyMapReduce +.. framework.MyMapReduce.Reducer
framework.Runnable <|.. framework.MyMapReduce.Reducer
@enduml